Parameterize InternalArgument with type of value
Other related classes follow (Expression, InstanceFunction, Parameter, CommandArgument, etc. also parameterized)

Added abstract class SafeFunctionCreator to provide @SafeVarargs versions of certain methods that can't be marked as such in the FunctionCreator interface

Added Signature interface and implementations to handle method signatures better

Added InstanceExecution and StaticExecution to take advantage of parameterization when declaring the code functions run. This acknowledges that developers know what type their inputs should have, allowing them to not have to cast InternalArgument values.

Other stuff:
- InternalArrayListArgument is now InternalListArgument
- CommandRunException now extends Exception rather than RuntimeException

TODO: Write javadocs for all this new stuff :s